examples/bad/MissingType.vv
-- File demonstrating missing type declaration

import Type ;;
import Nat ;;

add : NatT -> NatT -> NatT ;
add nt1 (nt2 : NatT) (N : Type) (z : N) (s : (N -> N)) = 
    let n1 : N ;
        n1 = nt1 N z s ;;
        n2 : N ;
        n2 = nt2 N n1 s ;;
    in  n2 ;;

main : U 2 ;
main = U 1 ;;